ajustes arc prod